fixed targeted drag on mobile

--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -247,6 +247,9 @@
         }
     }
     
+    .handle{
+        cursor: move;
+    }
     @include for-mobile-layout {
         
         .details-wrapper{
